--- a/Plugins/Levels Ranks/addons/sourcemod/translations/lr_core_ranks.phrases.txt
+++ b/Plugins/Levels Ranks/addons/sourcemod/translations/lr_core_ranks.phrases.txt
@@ -75,7 +75,7 @@
 	"rank_13"
 	{
 		"en"		"Master Guardian Elite"
-		"hu"		"Védelmező Elit Mester"
+		"hu"		"Elit Védelmező Mester"
 	}
 
 	"rank_14"
