--- a/Plugins/GameVote/addons/sourcemod/translations/GameVote.phrases.txt
+++ b/Plugins/GameVote/addons/sourcemod/translations/GameVote.phrases.txt
@@ -3,36 +3,36 @@
 	"gv_voted_for_ban"
 	{
 		"#format"		"{1:s},{2:s},{3:d},{4:d}"
-		"en"			"Player {1} voted for ban {2}. ({3}/{4})"
-		"hu"			"{1} szavazott {2} kitiltására. ({3}/{4})"
+		"en"			"Player {1} voted for ban {2}. ({3}/{4})"
+		"hu"			"{1} szavazott {2} kitiltására. ({3}/{4})"
 	}
 
 	"gv_voted_for_kick"
 	{
 		"#format"		"{1:s},{2:s},{3:d},{4:d}"
-		"en"			"Player {1} voted for kick {2}. ({3}/{4})"
-		"hu"			"{1} szavazott {2} kirúgására. ({3}/{4})"
+		"en"			"Player {1} voted for kick {2}. ({3}/{4})"
+		"hu"			"{1} szavazott {2} kirúgására. ({3}/{4})"
 	}
 
 	"gv_voted_for_mute"
 	{
 		"#format"		"{1:s},{2:s},{3:d},{4:d}"
-		"en"			"Player {1} voted for mute {2}. ({3}/{4})"
-		"hu"			"{1} szavazott {2} némítására. ({3}/{4})"
+		"en"			"Player {1} voted for mute {2}. ({3}/{4})"
+		"hu"			"{1} szavazott {2} némítására. ({3}/{4})"
 	}
 
 	"gv_wait_before_startvote"
 	{
 		"#format"		"{1:d}"
-		"en"			"Please wait {1} seconds before start public vote."
-		"hu"			"Kérlek várj {1} másodpercet mielőtt szavazást kezdeményeznél."
+		"en"			"Please wait {1} seconds before start public vote."
+		"hu"			"Kérlek várj {1} másodpercet mielőtt szavazást kezdeményeznél."
 	}
 
 	"gv_min_players"
 	{
 		"#format"		"{1:d}"
-		"en"			"Minimum players for voting: {1}."
-		"hu"			"Szavazáshoz szükséges játékosok száma: {1}."
+		"en"			"Minimum players for voting: {1}."
+		"hu"			"Szavazáshoz szükséges játékosok száma: {1}."
 	}
 
 	"gv_ban_title"
