Chat Processor Updated | Advanced Admin Updated | Chicken Big Spawner Added | DroneGun Spawner Updated | Drop Money Added | ExoJump Giver Added | Fix Angles Added | Give Weapons Added | NoScope Round Updated | Player Colors Added | Soccer Ball Spawner Added | Invisible Added

--- a/Plugins/Advanced Admin/addons/sourcemod/translations/advadmin.phrases.txt
+++ b/Plugins/Advanced Admin/addons/sourcemod/translations/advadmin.phrases.txt
@@ -363,8 +363,8 @@
 
 	"CMD_SpawnEnt_Usage"
 	{
-		"en"		"[SM] Usage: sm_spawnent <chicken [0-6] | ball [0-1] | snow | drone | dronegun>"
-		"hu"		"[SM] Használat: sm_spawnent <chicken [0-6] | ball [0-1] | snow | drone | dronegun>"
+		"en"		"[SM] Usage: sm_spawnent <chicken [1-6] | ball [1] | snow | drone>"
+		"hu"		"[SM] Használat: sm_spawnent <chicken [1-6] | ball [1] | snow | drone>"
 	}
 
 	"CMD_SpawnEnt"
