Advanced Admin, Bhop Stats, Chicken Big Spawner, HexProps, Fake Case, Player List, Soccer Ball Spawner & ViP Menu Updated

--- a/Plugins/Chicken Big Spawner/addons/sourcemod/translations/chickenbig_spawner.phrases.txt
+++ b/Plugins/Chicken Big Spawner/addons/sourcemod/translations/chickenbig_spawner.phrases.txt
@@ -11,4 +11,10 @@
 		"en"			"You cant spawn big chicken here!"
 		"hu"			"Ide nem tehetsz le nagy csirkét!"
 	}
+
+	"OnlyAlive"
+	{
+		"en"			"Only alive player can use this commands!"
+		"hu"			"Csak élő játékos használhatja ezt a parancsot!"
+	}
 }
